trunk/Archive2/8d/be5aac0de943b2/output
main.cpp:242:11: error: '::main' must return 'int'
 void main() {
           ^
